# clip

./: .gitignore  CMakeLists.txt  Clip4.pro  Dockerfile  Dockerfile.qt5  README.md  config.h  defs.h  main.cpp
AppDir/usr/share/applications/: clip.desktop
cmake/: Eigen3.cmake  TIFF.cmake
core/: crystal.cpp  crystal.h  laueplaneprojector.cpp  projector.cpp  stereoprojector.cpp
image/: basdataprovider.cpp  beziercurve.cpp  brukerprovider.cpp  dataprovider.cpp  dataprovider.h  dataproviderfactory.cpp  datascaler.cpp  datascalerfactory.cpp  laueimage.cpp  mwdataprovider.cpp  qimagedataprovider.cpp  qimagedataprovider.h  simplemonochromscaler.cpp  simplemonochromscaler.h  simplergbscaler.cpp  xyzdataprovider.cpp
indexing/: candidategenerator.cpp  indexer.cpp  indexer.h  livemarkermodel.cpp  solutionmodel.cpp
refinement/: fitparametertreeitem.cpp  neldermead.cpp  neldermead.h  neldermead_worker.cpp
resources/: AboutMessage.txt  resources_rc.py
tools/: abstractmarkeritem.cpp  circleitem.cpp  debug.h  histogramitem.cpp  itemstore.cpp  mat3D.cpp  mat3D.h  propagatinggraphicsobject.cpp  ruleritem.cpp  spotindicatorgraphicsitem.cpp  threadrunner.h  vec3D.cpp  webkittextobject.cpp  zoneitem.cpp
ui/: clipconfig.cpp  crystaldisplay.cpp  fitdisplay.cpp  hkltool.cpp  indexdisplay.cpp  mouseinfodisplay.cpp  printdialog.cpp  printdialog.h  printdialog.ui  projectiongraphicsview.cpp  projectionplane.cpp  projectionplane.h  reorient.cpp  resolutioncalculator.cpp
unittest/: tst_clipunittesttest.cpp
